--- a/qt.ui
+++ b/qt.ui
@@ -28,14 +28,17 @@
       <number>0</number>
      </property>
      <item>
-      <widget class="QGraphicsView" name="graphicsView"/>
-     </item>
-     <item>
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>TextLabel</string>
+      <widget class="QLabel" name="canvas">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>2</verstretch>
+        </sizepolicy>
        </property>
       </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="statusBar"/>
      </item>
     </layout>
    </widget>
