--- a/qt.ui
+++ b/qt.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <class>PuzzleWindow</class>
+ <widget class="QMainWindow" name="PuzzleWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -28,7 +28,7 @@
       <number>0</number>
      </property>
      <item>
-      <widget class="QLabel" name="canvas">
+      <widget class="QtCanvas" name="canvas">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
          <horstretch>0</horstretch>
@@ -64,7 +64,7 @@
      <addaction name="actionLight_Up"/>
      <addaction name="actionNet"/>
     </widget>
-    <addaction name="actionNew_Game"/>
+    <addaction name="actionNew"/>
     <addaction name="menuChoose_Game"/>
     <addaction name="actionRestart"/>
     <addaction name="actionSolve"/>
@@ -177,7 +177,7 @@
     <string>9</string>
    </property>
   </action>
-  <action name="actionNew_Game">
+  <action name="actionNew">
    <property name="text">
     <string>New Game</string>
    </property>
