--- a/qt.ui
+++ b/qt.ui
@@ -33,6 +33,9 @@
        <number>0</number>
       </property>
       <item>
+       <widget class="QtCanvas" name="toolBar"/>
+      </item>
+      <item>
        <widget class="QtCanvas" name="canvas" native="true">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -94,98 +97,6 @@
    <addaction name="menuType"/>
    <addaction name="menuHelp"/>
   </widget>
-  <widget class="QToolBar" name="toolBar">
-   <property name="windowTitle">
-    <string>toolBar</string>
-   </property>
-   <property name="movable">
-    <bool>false</bool>
-   </property>
-   <property name="allowedAreas">
-    <set>Qt::TopToolBarArea</set>
-   </property>
-   <property name="floatable">
-    <bool>false</bool>
-   </property>
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-   <addaction name="actiontbUndo"/>
-   <addaction name="actiontbRedo"/>
-   <addaction name="actiontb0"/>
-   <addaction name="actiontb1"/>
-   <addaction name="actiontb2"/>
-   <addaction name="actiontb3"/>
-   <addaction name="actiontb4"/>
-   <addaction name="actiontb5"/>
-   <addaction name="actiontb6"/>
-   <addaction name="actiontb7"/>
-   <addaction name="actiontb8"/>
-   <addaction name="actiontb9"/>
-  </widget>
-  <action name="actiontbUndo">
-   <property name="text">
-    <string>Undo</string>
-   </property>
-  </action>
-  <action name="actiontbRedo">
-   <property name="text">
-    <string>Redo</string>
-   </property>
-  </action>
-  <action name="actiontb0">
-   <property name="text">
-    <string>0</string>
-   </property>
-  </action>
-  <action name="actiontb1">
-   <property name="text">
-    <string>1</string>
-   </property>
-  </action>
-  <action name="actiontb2">
-   <property name="text">
-    <string>2</string>
-   </property>
-  </action>
-  <action name="actiontb3">
-   <property name="text">
-    <string>3</string>
-   </property>
-  </action>
-  <action name="actiontb4">
-   <property name="text">
-    <string>4</string>
-   </property>
-  </action>
-  <action name="actiontb5">
-   <property name="text">
-    <string>5</string>
-   </property>
-  </action>
-  <action name="actiontb6">
-   <property name="text">
-    <string>6</string>
-   </property>
-  </action>
-  <action name="actiontb7">
-   <property name="text">
-    <string>7</string>
-   </property>
-  </action>
-  <action name="actiontb8">
-   <property name="text">
-    <string>8</string>
-   </property>
-  </action>
-  <action name="actiontb9">
-   <property name="text">
-    <string>9</string>
-   </property>
-  </action>
   <action name="actionNew">
    <property name="text">
     <string>New Game</string>
